# native_methods_practice

./: .gitignore  pyproject.toml  requirements.txt  setup.cfg
Native_Methods_Practice.egg-info/: PKG-INFO  SOURCES.txt
src/: __init__.py  dictionaries.py  lists.py  strings.py
tests/: test_dictionaries.py  test_lists.py  test_strings.py
