[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[tool.pytest.ini_options]
markers = [
    "strings",
    "capitalize", 
    "center", 
    "count", 
    "index", 
    "islower", 
    "isnumeric", 
    "join", 
    "lower", 
    "replace", 
    "split", 
    "title",
    ]
